<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:id="@+id/logView">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:contentDescription="@string/balina"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/emailAutoComplete"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="217dp"
        android:fontFamily="@font/helveticaneuecyr_medium"
        android:text="@string/e_mail"
        android:textSize="14sp" />

    <AutoCompleteTextView
        android:id="@+id/emailAutoComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/helveticaneuecyr_medium"
        android:hint="@string/emailHint"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/passTitle"
        android:layout_width="wrap_content"
        android:layout_height="16sp"
        android:layout_below="@+id/emailAutoComplete"
        android:layout_alignStart="@+id/emailTitle"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/helveticaneuecyr_roman"
        android:text="@string/pass"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/passEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:fontFamily="@font/helveticaneuecyr_medium"
        android:hint="@string/passHint"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:maxLength="10"
        android:maxLines="1"/>

    <CheckBox
        android:id="@+id/showPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/passEnter"
        android:layout_alignEnd="@+id/passEnter"
        android:layout_alignBottom="@+id/passEnter"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="17dp"
        android:button="@drawable/check_box"
        android:checked="false"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="379dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/helveticaneuecyr_medium"
        android:text="@string/signUp"
        android:textSize="16sp" />



</RelativeLayout>